# PiCa

./: .gitignore  .info score cp 48 depth 7 nodes 508265 qn  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  test.sh  testuci
.github/workflows/: build.yml
benches/: bench.rs
src/: cache_table.rs  engine.rs  eval.rs  lib.rs  main.rs  stats.rs  tables.rs  tests.rs  time.rs  tt.rs  tuning.rs  utils.rs
src/tuner/: main.rs
