[package]
name = "pica"
version = "0.0.1"
edition = "2021"

[dependencies]
chess = "3.2.0"
lazy_static = "1.4.0"
vampirc-uci = { version = "0.11.1", features = ["chess"] }

[profile.release]
# https://rusz.space/small-rust.html
opt-level = 3  # Optimize for size.
lto = true # Use "fat" LTO
strip = true # Remove debug symbols
codegen-units = 1 # Compile in one big chunk
panic = "abort" # Do not provide a stack trace on panic
