[package]
name = "pica"
version = "0.0.5"
edition = "2021"

[dependencies]
cozy-chess = { version = "0.3.4", features = ["std"] }
lazy_static = "1.4.0"
cozy-uci = { git = "https://github.com/analog-hors/cozy-uci.git" }
arrayvec = "0.7.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false

[profile.release]
# https://rusz.space/small-rust.html
opt-level = 3  # Optimize for size.
lto = true # Use "fat" LTO
#strip = true # Remove debug symbols
codegen-units = 1 # Compile in one big chunk
panic = "abort" # Do not provide a stack trace on panic
# For profiling
strip = false # Remove debug symbols
debug = 1
