[package]
name = "pica"
version = "0.0.5"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
chess = "3.2.0"
lazy_static = "1.4.0"
vampirc-uci = { version = "0.11.1", features = ["chess"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false

[profile.release]
# https://rusz.space/small-rust.html
opt-level = 3  # Optimize for size.
lto = true # Use "fat" LTO
strip = false
codegen-units = 1 # Compile in one big chunk
panic = "abort" # Do not provide a stack trace on panic
debug = true
# debug is true for profiling
